# Drone_Indoor_ROS2

./: .gitmodules  CMakeLists.txt  README.md  package.xml  readme.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/drone_ros2_centralized_control/include/drone_ros2_centralized_control/msg/: attitude_setpoint2.h  attitude_setpoint2.hpp  rosidl_generator_cpp__visibility_control.hpp  uav_cmd.h  uav_cmd.hpp  uav_state.h
install/drone_ros2_centralized_control/lib/drone_ros2_centralized_control/: mdp_20250506_single_agent_main.py
install/drone_ros2_centralized_control/lib/drone_ros2_centralized_control/utils2/: vis.py
install/drone_ros2_centralized_control/share/drone_ros2_centralized_control/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/drone_ros2_centralized_control/share/drone_ros2_centralized_control/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  drone_ros2_centralized_controlConfig.cmake  drone_ros2_centralized_control__rosidl_generator_cExport-noconfig.cmake  drone_ros2_centralized_control__rosidl_generator_cExport.cmake  drone_ros2_centralized_control__rosidl_typesupport_cExport-noconfig.cmake  drone_ros2_centralized_control__rosidl_typesupport_cppExport.cmake  drone_ros2_centralized_control__rosidl_typesupport_introspection_cExport-noconfig.cmake  drone_ros2_centralized_control__rosidl_typesupport_introspection_cExport.cmake  drone_ros2_centralized_control__rosidl_typesupport_introspection_cppExport.cmake
install/drone_ros2_centralized_control/share/drone_ros2_centralized_control/launch/: example_waypt_ctrl.launch.py  mdp_20250506_single_agent.launch.py
launch/: example_trajectory_ctrl.launch.py
log/: latest_build
msg/: UavCmd.msg
px4/: readme.txt
px4/Tools/simulation/gazebo-classic/: sitl_multiple_run29_form8.sh
src/example/: example_traverse_multiple_waypts.py  multiple_uav_ctrl.py  multiple_uav_waypts.py
src/gazebo_sim/: gazebo_px4_relay.py
src/ros1_ref/: MavRouter_standard_ROS_2_0.py  [raw]MavRouter_standard.py  main_mine.py  single_uav_circle_example.py
src/ros1_ref/utils/: PID.py  __init__.py  demo_control_copy.py  functions.py  vis.py
src/utils2/: PID.py  waypts.py
(+27 files in other folders)
